添加对项目依赖的导入，eg. bootstrap等

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ember-basic-deps",
+  "name": "chosan-ember-basic-deps",
   "version": "0.0.01",
   "description": "The default blueprint for ember-cli addons.",
   "keywords": [
