--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   },
   "dependencies": {
     "ember-cli-babel": "^6.6.0",
-    "ember-cli-htmlbars": "^2.0.1"
+    "ember-cli-htmlbars": "^2.0.1",
+    "ember-cli-sass": "^7.1.7",
+    "ember-css-modules": "^0.7.10",
+    "ember-css-modules-sass": "^1.0.0"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
